--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,5 +24,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        cache-dependency-path: react/package-lock.json
     - run: npm ci
     - run: npm run build --if-present
